fix: nav mobile menu overflow

--- a/assets/css/global-nav.css
+++ b/assets/css/global-nav.css
@@ -127,6 +127,7 @@
         left: 0;
         right: 0;
         padding-top: 32px;
+        overflow-y: auto;
     }
 
     .g_nav_menu[open] {
